--- a/bj/templates/bj/registr.html
+++ b/bj/templates/bj/registr.html
@@ -1,4 +1,28 @@
 {% extends 'bj/base.html' %}
 {% block content %}
-    <h1>123</h1>	
+<div class="row" style="margin-top:60px">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    	<form role="form">
+			<fieldset>
+				<h2>регистрация</h2>
+				<hr class="colorgraph">
+				<div class="form-group">
+                    <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Логин">
+				</div>
+				<div class="form-group">
+                    <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Пароль">
+				</div>
+				<hr class="colorgraph">
+				<div class="row">
+					<div class="col-xs-6 col-sm-6 col-md-6">
+                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Войти">
+					</div>
+					<div class="col-xs-6 col-sm-6 col-md-6">
+						<a href="/registration/" class="btn btn-lg btn-primary btn-block">Регистрация</a>
+					</div>
+				</div>
+			</fieldset>
+		</form>
+	</div>
+</div>	
 {% endblock %}
