--- a/bj/templates/bj/registr.html
+++ b/bj/templates/bj/registr.html
@@ -4,21 +4,39 @@
     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
     	<form role="form">
 			<fieldset>
-				<h2>регистрация</h2>
+				<h2>Регистрация</h2>
 				<hr class="colorgraph">
+				<div class="form-group">
+                    <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Имя">
+				</div>
+				<div class="form-group">
+                    <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Фамилия">
+				</div>
 				<div class="form-group">
                     <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Логин">
 				</div>
+				<div class="form-group">
+                    <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Email">
+				</div>
+				<div>
+					<select size="3" multiple required name="hero[]" class="form-control">
+    				<option disabled>Выберите героя</option>
+    				<option value="Чебурашка">Чебурашка</option>
+    				<option selected value="Крокодил Гена">Крокодил Гена</option>
+    				<option value="Шапокляк">Шапокляк</option>
+    				<option value="Крыса Лариса">Крыса Лариса</option>
+   					</select>
+   				</div>
 				<div class="form-group">
                     <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Пароль">
 				</div>
 				<hr class="colorgraph">
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6">
-                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Войти">
+                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Заргегестрироваться">
 					</div>
 					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a href="/registration/" class="btn btn-lg btn-primary btn-block">Регистрация</a>
+						<a href="/login/" class="btn btn-lg btn-primary btn-block">Уже есть аккаунт?</a>
 					</div>
 				</div>
 			</fieldset>
