--- a/bj/templates/bj/sidebar.html
+++ b/bj/templates/bj/sidebar.html
@@ -1,1 +1,14 @@
-123
+<div class="panel panel-default">
+	<div class="panel-heading">
+		<h3 class="panel-title">Навигация</h3>
+	</div>
+	<div class="panel-body">
+		<ul class="nav nav-pills nav-stacked">
+			<li role="presentation" class="active"><a href="#">Домой</a></li>
+			<li role="presentation"><a href="#">Профиль</a></li>
+			<li role="presentation"><a href="#">Расписание</a></li>
+			<li role="presentation"><a href="#">Полезные ссылки</a></li>
+		</ul>
+
+	</div>
+</div>
