--- a/bj/templates/bj/registr.html
+++ b/bj/templates/bj/registr.html
@@ -18,14 +18,14 @@
 				<div class="form-group">
                     <input type="login" name="login" id="login" class="form-control input-lg" placeholder="Email">
 				</div>
-				<div>
-					<select size="3" multiple required name="hero[]" class="form-control">
-    				<option disabled>Выберите героя</option>
-    				<option value="Чебурашка">Чебурашка</option>
-    				<option selected value="Крокодил Гена">Крокодил Гена</option>
-    				<option value="Шапокляк">Шапокляк</option>
-    				<option value="Крыса Лариса">Крыса Лариса</option>
-   					</select>
+				<div class="form-group">
+					<select class="form-control">
+  						<option disabled>Выберите группу</option>
+  						<option value="">АИС11</option>
+  						<option value="">ПМИ11</option>
+  						<option value="">МФ11</option>
+  						<option value="">Преподаватель</option>
+					</select>
    				</div>
 				<div class="form-group">
                     <input type="password" name="password" id="password" class="form-control input-lg" placeholder="Пароль">
@@ -33,10 +33,10 @@
 				<hr class="colorgraph">
 				<div class="row">
 					<div class="col-xs-6 col-sm-6 col-md-6">
-                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Заргегестрироваться">
+                        <input type="submit" class="btn btn-lg btn-success btn-block" value="Регистрация">
 					</div>
 					<div class="col-xs-6 col-sm-6 col-md-6">
-						<a href="/login/" class="btn btn-lg btn-primary btn-block">Уже есть аккаунт?</a>
+						<a href="/login/" class="btn btn-lg btn-primary btn-block">Есть аккаунт?</a>
 					</div>
 				</div>
 			</fieldset>
