--- a/bj/templates/bj/home.html
+++ b/bj/templates/bj/home.html
@@ -1,4 +1,10 @@
 {% extends 'bj/base.html' %}
 {% block content %}
-    <h1>123</h1>	
+
+<div class="panel panel-default panel-primary">
+	<div class="panel-heading">В работе</div>
+	<div class="panel-body">
+		Весь функционал сайта находится в разработке.
+	</div>	
+</div>
 {% endblock %}
