--- a/bj/templates/bj/sidebar.html
+++ b/bj/templates/bj/sidebar.html
@@ -1,13 +1,16 @@
-<div class="panel panel-default">
+<div class="panel panel-default panel-primary">
 	<div class="panel-heading">
 		<h3 class="panel-title">Навигация</h3>
 	</div>
 	<div class="panel-body">
 		<ul class="nav nav-pills nav-stacked">
-			<li role="presentation" class="active"><a href="#">Домой</a></li>
-			<li role="presentation"><a href="#">Профиль</a></li>
-			<li role="presentation"><a href="#">Расписание</a></li>
+			<li role="presentation"><a href="/">Главная</a></li>
+			<li role="presentation"><a href="/rasp/">Расписание</a></li>
+			<li role="presentation"><a href="/bj/">Успеваемость</a></li>
 			<li role="presentation"><a href="#">Полезные ссылки</a></li>
+			<li role="presentation"><a href="#">Онлайн библиотека</a></li>
+			<li role="presentation"><a href="#">Онлайн консультация</a></li>
+			<li role="presentation"><a href="/contacts/">Контакты</a></li>
 		</ul>
 
 	</div>
