--- a/bj/templates/bj/base.html
+++ b/bj/templates/bj/base.html
@@ -27,7 +27,13 @@
                     </button>
                     <a class="navbar-brand" href="#">БашГУ</a>
                 </div>
-                <a href="/login/" type="button" class="btn btn-default navbar-btn navbar-right">Войти</a>
+                <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Что интересует?">
+                    </div>
+                    <button type="submit" class="btn btn-default">Поиск</button>
+                </form>
+                <a href="/login/" type="button" class="btn btn-default btn-primary navbar-btn navbar-right">Войти</a>
             </div>
         </nav>
         <div class="jumbotron">
